--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ejercicio Pair Programming</title>
-  </head>
-  <body>
-	<nav class="navbar navbar-light bg-light">
-		<div class="container-fluid">
-		  <span class="navbar-brand mb-0 h1">Ejercicio Pair Programming</span>
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
+	<title>Ejercicio Pair Programming</title>
+</head>
+
+<body>
+	<div class="div">
+		<div class="row">
+			<div class="col-12 text-center mb-5">
+				<h1>Ejercicio Pair Programming</h1>
+			</div>
 		</div>
-	  </nav>
-    <div class="div container">
+	</div>
+	<div class="div container">
+		<div class="row text-center">
+			<div class="col-6">
+				<h2>Jugador 1</h2>
+				<div id="pj1" class="div">0</div>
+			</div>
+			<div class="col-6">
+				<h2>Jugador 2</h2>
+				<div id="pj2" class="div">0</div>
+			</div>
+		</div>
 		<div class="row text-center">
 			<div class="col-12">
 				<canvas id="canvas"></canvas>
@@ -25,11 +40,15 @@
 	</div>
 	<div class="footer">
 		<div class="row">
-			<div class="col-12">
+			<div class="col-12 text-center">
 				Por David H. Angarita y Lukas Jimenez - Sofka
 			</div>
 		</div>
 	</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+	<script src="index.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
