Se añadio boton reset y contadores con bootstrap

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 		</div>
 	</div>
 	<div class="div container">
+		<div class="row">
+			<div class="col-12 text-center mb-5">
+				<h2>Instrucciones</h2>
+				<p>Para iniciar el juego presiola la barra espaciadora, el jugador 1 mueve con las teclas W y S, el jugador 2 mueve con las flechas arriba y abajo.</p>
+			</div>
+		</div>
 		<div class="row text-center">
 			<div class="col-6">
 				<h2>Jugador 1</h2>
@@ -35,6 +41,11 @@
 		<div class="row text-center">
 			<div class="col-12">
 				<canvas id="canvas"></canvas>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 text-center">
+				<button type="button" class="btn btn-primary" onclick="location.reload()">Resetear</button>
 			</div>
 		</div>
 	</div>
