--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="div">
-		<div class="row">
+		<div id="header" class="row">
 			<div class="col-12 text-center mb-5">
 				<h1>Ejercicio Pair Programming</h1>
 			</div>
@@ -25,10 +25,10 @@
 		<div class="row">
 			<div class="col-12 text-center mb-5">
 				<h2>Instrucciones</h2>
-				<p>Para iniciar el juego presiola la barra espaciadora, el jugador 1 mueve con las teclas W y S, el jugador 2 mueve con las flechas arriba y abajo.</p>
+				<p class="offset-3">Para iniciar el juego presiona la barra espaciadora <img src="img/barra.jpg" alt="barra espaciadora"> , el jugador 1 mueve con las teclas <img src="img/w.png" alt="tecla w"> y <img src="img/s.png" alt="tecla s">, el jugador 2 mueve con las flechas <img src="img/arriba.png" alt="tecla arriba"> y <img src="img/abajo.png" alt="tecla abajo">.</p>
 			</div>
 		</div>
-		<div class="row text-center">
+		<div id="score" class="row text-center">
 			<div class="col-6">
 				<h2>Jugador 1</h2>
 				<div id="pj1" class="div">0</div>
