Se hizo merge y se añadio texto en html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class="col-12 text-center mb-5">
 				<h2>Instrucciones</h2>
-				<p class="offset-3">Para iniciar el juego presiona la barra espaciadora <img src="img/barra.jpg" alt="barra espaciadora"> , el jugador 1 mueve con las teclas <img src="img/w.png" alt="tecla w"> y <img src="img/s.png" alt="tecla s">, el jugador 2 mueve con las flechas <img src="img/arriba.png" alt="tecla arriba"> y <img src="img/abajo.png" alt="tecla abajo">.</p>
+				<p class="offset-3">Para iniciar el juego presiona la barra espaciadora <img src="img/barra.jpg" alt="barra espaciadora"> , el jugador 1 mueve con las teclas <img src="img/w.png" alt="tecla w"> y <img src="img/s.png" alt="tecla s">, el jugador 2 mueve con las flechas <img src="img/arriba.png" alt="tecla arriba"> y <img src="img/abajo.png" alt="tecla abajo">. El jugador que primero anote 5 puntos gana.</p>
 			</div>
 		</div>
 		<div id="score" class="row text-center">
